# warp

./: .i18n-ignore.toml  Cargo.toml
.github/workflows/: build-windows.yml  i18n-check.yml
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  changelog_model.rs  debug_dump.rs  input_suggestions.rs  lib.rs  menu.rs  reward_view.rs  root_view.rs  session_management.rs  tab.rs  wasm_nux_dialog.rs
app/src/ai/: agent_conversations_model.rs  agent_conversations_model_tests.rs  agent_tips.rs  ai_document_view.rs  artifact_download.rs  aws_credentials.rs  conversation_details_panel.rs  conversation_details_panel_tests.rs  conversation_rename.rs  llms.rs  llms_tests.rs  persisted_workspace.rs
app/src/ai_assistant/: panel.rs  requests.rs  transcript.rs  utils.rs
app/src/auth/: auth_view_body.rs  auth_view_modal.rs  auth_view_shared_helpers.rs  login_slide.rs  mod.rs  needs_sso_link_view.rs  paste_auth_token_modal.rs
app/src/autoupdate/: linux.rs  mac.rs
app/src/banner/: view.rs
app/src/billing/: shared_objects_creation_denied_body.rs  shared_objects_creation_denied_modal.rs
app/src/chip_configurator/: modal_shell.rs
app/src/cloud_object/: grab_edit_access_modal.rs  mod.rs  toast_message.rs
app/src/code/: find_references_view.rs  footer.rs  global_buffer_model.rs  inline_diff.rs  language_server_extension.rs  local_code_editor.rs  view.rs
app/src/code_review/: code_review_view.rs  comment_list_view.rs  comment_rendering.rs  diff_menu.rs  diff_selector.rs  diff_size_limits.rs  mod.rs
app/src/coding_entrypoints/: clone_repo_view.rs  create_project_view.rs  project_buttons.rs
app/src/context_chips/: context_chip.rs  current_prompt.rs  display_chip.rs  display_chip_tests.rs  mod.rs  node_version_popup.rs  prompt_type.rs
app/src/crash_reporting/: mod.rs  sentry_minidump.rs
app/src/default_terminal/: mac.rs  mod.rs
app/src/drive/: export.rs  (+4 more)
crates/direct_llm/: Cargo.toml
crates/direct_llm/src/: lib.rs  openai_client.rs  request_translator.rs  response_translator.rs  system_prompt.rs
crates/i18n/: Cargo.toml  build.rs
crates/i18n/_locales/: en.yml
crates/i18n/_locales/zh-CN/: _shared.yml  appearance.yml  extracted.yml  settings.yml
crates/i18n/src/: detection.rs  init.rs  language.rs  lib.rs
crates/i18n/tests/: detection.rs  language.rs  smoke.rs  yml_load.rs
crates/i18n_tools/: Cargo.toml
crates/i18n_tools/src/: lib.rs  lib_tests.rs
crates/onboarding/: Cargo.toml
(+519 files in other folders)
