[package]
name = "direct_llm"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
warp_multi_agent_api = { workspace = true }
prost = { workspace = true }

[lib]
path = "src/lib.rs"
