[package]
name = "i18n"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
rust-i18n = { workspace = true }
sys-locale = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
settings = { workspace = true }
